# python_magnetworkflows

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
debian/: README.Debian  README.source  changelog  control  copyright  rules  watch
python_magnetworkflows/: Cooling.py  cli.py  commissioning.py  cooling.py  create_U.py  error.py  oneconfig.py  params.py  real_methods.py  run.py  solver.py  waterflow.py
workflows/: cli.py
